# YYEVA-Android

./: .gitignore  LICENSE  README.md  README_en.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yy/yyeva/player/: EvaCActivity.kt  EvaDemoActivity.kt  EvaDownloadDemoActivity.kt  EvaKeyDemoActivity.kt  EvaKeyListDemoActivity.kt  EvaKeyRecyclerAdapter.kt  FileUtil.kt  MainActivity.kt
app/src/main/java/com/yy/yyeva/player/bean/: VideoInfo.kt
app/src/main/java/com/yy/yyeva/player/util/: EvaCache.kt  EvaDownloader.kt
app/src/main/res/layout/: activity_anim_demo_recycle.xml  activity_anim_simple_demo_c.xml  activity_anim_simple_demo_p.xml  activity_main.xml  item_animview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
yyevac/: CMakeLists.txt  build.gradle  publish.gradle
yyevac/src/main/: AndroidManifest.xml
yyevac/src/main/aidl/com/yy/yyevav2/service/: IRemoteCallback.aidl  IServiceInterface.aidl
yyevac/src/main/cpp/: yyeva2jni.cpp  yyeva_ff.cpp  yyevajni.cpp
yyevac/src/main/cpp/bean/: data.h  datas.h  descript.h  effect.cpp  effect.h  evaanimeconfig.cpp  evaanimeconfig.h  evaframe.cpp  evaframe.h  evaframeall.cpp  evaframeall.h  evaframeset.cpp  evaframeset.h  evasrc.cpp  evasrc.h  evasrcmap.cpp  evasrcmap.h  optionparams.cpp  optionparams.h  pointrect.h
yyevac/src/main/cpp/control/: AudioCodec.cpp  AudioCodec.h  AudioEngine.cpp  AudioEngine.h  AudioPlayer.cpp  AudioPlayer.h  DataVector.h  evaconfig.cpp  evaconfig.h  evalistenermanager.cpp  evalistenermanager.h  iaudiodecodecontroller.h  iaudioplaycontroller.h  iframedecodecontroller.h  iframerendercontroller.h  inativeplayer.h  nativeplayer.cpp  nativeplayer.h  rendermanger.cpp  rendermanger.h  videodecoder.cpp  videodecoder.h
yyevac/src/main/cpp/egl/: eglcore.cpp  eglcore.h  glbase.h
yyevac/src/main/cpp/engine/: bgrender.cpp  bgrender.h  evaengine.cpp  evaengine.h  fbrender.cpp  fbrender.h  framebufferrender.cpp  framebufferrender.h  irender.h  mp4render.cpp  mp4render.h  recordrender.cpp  recordrender.h  render.cpp  render.h  rendercontroller.cpp  rendercontroller.h  yuvrender.cpp  yuvrender.h
yyevac/src/main/cpp/include/libavutil/: ffversion.h
yyevac/src/main/cpp/mix/: evamixrender.cpp  evamixrender.h  mixrender.cpp  mixrender.h  mixshader.cpp  mixshader.h
yyevac/src/main/cpp/oboe/: CMakeLists.txt
yyevac/src/main/cpp/player/: EvaPlayerContext.h
yyevac/src/main/cpp/player/common/: easy.h  safequeue.h
yyevac/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  DecoderController.cpp  DecoderController.h  VideoDecoder.cpp  VideoDecoder.h
yyevac/src/main/cpp/player/queue/: AVBufferConsumer.cpp  AVBufferConsumer.h  AVBufferProducer.cpp  AVBufferProducer.h  BufferQueueContext.cpp  BufferQueueContext.h  Frame.h  FrameQueue.cpp  FrameQueue.h  IBufferConsumerListener.h  PacketQueue.cpp  PacketQueue.h
yyevac/src/main/cpp/record/: recordercontroller.cpp  recordercontroller.h
yyevac/src/main/cpp/util/: ELog.cpp  ELog.h  cbase64.h  elog.cpp  elog.h  evaconstant.cpp  evaconstant.h  evafilecontainer.cpp  evafilecontainer.h  evamediautil.cpp  evamediautil.h  glfloatarray.cpp  glfloatarray.h  ievafilecontainer.h  localsocketclient.cpp  localsocketclient.h  localsocketserver.cpp  localsocketserver.h  parson.c  parson.h  safequeue.h  shaderutil.cpp  shaderutil.h  speedcontrolutil.cpp  speedcontrolutil.h  texcoordsutil.cpp  texcoordsutil.h  textureloadutil.cpp  textureloadutil.h  thread.cpp  thread.h  threadpool.h  vertexutil.cpp  vertexutil.h  zutil.h
yyevac/src/main/java/com/yy/yyeva/: EvaAnimConfig.kt  EvaAnimConfigManager.kt  EvaAnimPlayer.kt  IEvaRenderListener.kt
yyevac/src/main/java/com/yy/yyeva/decoder/: EvaDecoder.kt  EvaHardDecoder.kt
yyevac/src/main/java/com/yy/yyeva/file/: EvaAssetsEvaFileContainer.kt  EvaFileContainer.kt  EvaPref.kt  EvaStreamContainerEva.kt  EvaStreamMediaDataSource.kt  FileUtil.kt  IEvaFileContainer.kt
yyevac/src/main/java/com/yy/yyeva/inter/: IEvaAnimListener.kt  IEvaFetchResource.kt  OnEvaResourceClickListener.kt
yyevac/src/main/java/com/yy/yyeva/mix/: EvaFrame.kt  EvaMixAnimPlugin.kt  EvaMixTouch.kt  EvaResource.kt  EvaSrc.kt
yyevac/src/main/java/com/yy/yyeva/plugin/: EvaAnimPluginManager.kt  IEvaAnimPlugin.kt
yyevac/src/main/java/com/yy/yyeva/recorder/: EvaAudioRecorder.kt  EvaMediaRecorder.kt  EvaVideoRecorder.kt  MediaMuxerCoder.kt  YYEvaMediaRecorder.kt
yyevac/src/main/java/com/yy/yyeva/util/: ELog.kt  EvaBitmapUtil.kt  EvaCache.kt  EvaConstant.kt  EvaDownloader.kt  EvaJniUtil.kt  EvaMediaUtil.kt  EvaSocketServer.kt  EvaVideoEntity.kt  PkUtils.kt  PointRect.kt  ScaleTypeUtil.kt  SpeedControlUtil.kt
yyevac/src/main/java/com/yy/yyeva/view/: EvaAnimView.kt  EvaAnimViewV3.kt  EvaAudioPlayer.kt  IEvaAnimView.kt  InnerSurfaceView.kt  InnerTextureView.kt
yyevac/src/main/java/com/yy/yyevav2/: EvaPlayer.kt
yyevac/src/main/java/com/yy/yyevav2/downloder/: EvaDownloader.kt
yyevac/src/main/java/com/yy/yyevav2/impl/: EvaSrcSim.kt  IEvaAnimListener.kt  IEvaRemoteListener.kt
yyevac/src/main/java/com/yy/yyevav2/log/: EvaLog.kt  ILog.kt
yyevac/src/main/java/com/yy/yyevav2/params/: AddressSource.kt  AssetsSource.kt  EffectParams.kt  FileSource.kt  OptionParams.kt  SourceParams.kt  URLSource.kt
yyevac/src/main/java/com/yy/yyevav2/player/: EvaPlayerImpl.kt  EvaThread.kt  IEvaPlayer.kt  IEvaRender.kt  PlayerInner.kt
yyevac/src/main/java/com/yy/yyevav2/service/: RemoteDecodeService.kt
yyevac/src/main/java/com/yy/yyevav2/util/: EvaBitmapUtil.kt  EvaJniUtil.kt
yyevac/src/main/java/com/yy/yyevav2/view/: EvaSurfaceView.kt  EvaTextureView.kt  IEvaGlView.kt
yyevac/src/main/res/values/: strings.xml
